# todoist-conv

./: .gitignore  README.md  pyproject.toml
src/todoist_conv/: cli.py  model.py
src/todoist_conv/formats/: __init__.py  base.py  json.py
src/todoist_conv/formats/csv/: __init__.py  common.py  parser.py  serializer.py
test/data/: Weekly Review.csv
test/formats/: test_csv.py
test/formats/__snapshots__/: test_csv.ambr
todoist_conv/: model.py  text.py
todoist_conv/formats/: __init__.py  csv.py  opml.py
todoist_conv/formats/csv/: __init__.py  common.py  parser.py  serializer.py
todoist_conv/formats/opml/: __init__.py  parser.py  serializer.py
