[tool.poetry]
name = "todoist-conv"
version = "0.1.1"
description = "Convert Todoist generated CSVs to/from other formats"
authors = ["Ygor Mutti <ygormutti@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
todoist-conv = 'todoist_conv.cli:cli'

[tool.poetry.dependencies]
python = "3.10.4"
click = "^8.1.3"
pydantic = "^1.9.1"
chardet = "^5.1.0"

[tool.poetry.dev-dependencies]
rope = "^1.2.0"
flake8 = "^6.0.0"
black = "^22.6.0"
pytest = "^7.1.2"
isort = "^5.10.1"
Flake8-pyproject = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88