[project]
name = "todoist-conv"
version = "0.1.5"
description = "Convert Todoist generated CSVs to/from other formats"
authors = [{ name = "Ygor Mutti", email = "ygormutti@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.1.3,<9",
    "pydantic>=1.9.1,<2",
    "chardet>=5.1.0,<6",
]

[project.scripts]
todoist-conv = "todoist_conv.cli:cli"

[dependency-groups]
dev = [
    "rope>=1.2.0,<2",
    "pytest>=7.1.2,<8",
    "syrupy>=4.9.1",
    "ruff>=0.15.2",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "todoist_conv"
module-root = ""

